<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015, 
  -->

<resources>
	


	<!--通用-->
    <string name="app_name">灵树家谱</string>
    <string name="refresh">Refresh</string>
    <string name="no_data_description"/>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
	<!--灵树-->
	<string name="spirit_tree">灵树</string>

	<!--家谱-->
	<string name="genealogy">家谱</string>
	<string name="genealogyinfo">家谱信息</string>


    <string name="create_genealog">创建家谱</string>
    <string name="create_genealog_member">创建家谱成员</string>

    <string name="edit_genealog">修改家谱</string>
    <string name="join_genealog">加入家谱</string>
    <string name="search_genealog">查找家谱</string>


	<!--祠堂-->
	<string name="ancestrall_hall">祠堂</string>

	<!--家乡-->
	<string name="hometown">家乡</string>

	<!--动态-->
	<string name="trends">动态</string>

	<!--宣传广告-->

    <!--用户-->
    <string name="register_user">注册用户</string>
    <string name="edit_user">修改</string>
    <string name="add_user">New TO-DO</string>
    <string name="user_marked_complete">User marked complete</string>
    <string name="user_marked_active">User marked active</string>
    <string name="loading_users_error">Error while loading users</string>
    <string name="completed_users_cleared">Completed users cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_user">Delete user</string>
    <string name="navigation_view_header_account">TO-DOs</string>
    <string name="account_hint">Account</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_user_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_user_message">TO-DO saved</string>
    <string name="list_account">TO-DO List</string>
    <string name="statistics_account">Statistics</string>
    <string name="statistics_no_users">You have no users.</string>
    <string name="statistics_active_users">Active users: %d</string>
    <string name="statistics_completed_users">Completed users: %d</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string-array name="list_users_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_users_all">You have no TO-DOs!</string>
    <string name="no_users_active">You have no active TO-DOs!</string>
    <string name="no_users_completed">You have no completed TO-DOs!</string>
    <string name="no_users_add">Add a TO-DO item +</string>
    <string name="successfully_deleted_user_message">User was deleted</string>
    <string name="successfully_added_user_message">TO-DO added</string>


</resources>
