<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/list_navigation_menu_item"
        android:icon="@drawable/ic_list"
        android:title="@string/list_account" />
    <item
        android:id="@+id/statistics_navigation_menu_item"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_account" />



    <item
        android:id="@+id/navigation_trends"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/trends"/>

    <item
        android:id="@+id/navigation_ancestrall_hall"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/ancestrall_hall"/>

    <item
        android:id="@+id/navigation_hometown"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/hometown"/>


</menu>